Always show vertical scrollbar to prevent jumpy ui

--- a/public/global.css
+++ b/public/global.css
@@ -30,6 +30,10 @@
   --mini-player-bottom: 150px;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body {
   width: 100%;
